Fix wrapping on tool rows

--- a/app/styles/body.styl
+++ b/app/styles/body.styl
@@ -3,6 +3,8 @@
 body
   font-family: "Ubuntu Sans", sans-serif
   height: 100%
+  width: 100%
+  overflow: hidden
   background: $backgroundGray
 
 div#app
