--- a/app/styles/dashboard.styl
+++ b/app/styles/dashboard.styl
@@ -1,7 +1,7 @@
 @import "common"
 
 section#dashboard 
-  width: inherit
+  width: 200%
 
   ul#zoom-controls
     list-style: none;
@@ -31,4 +31,4 @@ section#dashboard
   .row
     display: block
     margin-bottom: 20px;
-    overflow-y: hidden;
+    overflow: hidden;
